tests/ui/option_default_value.stderr
error: proc-macro derive panicked
  --> $DIR/option_default_value.rs:13:10
   |
13 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = help: message: default_value is meaningless for Option
